# rust-read-filter

./: .gitignore  Cargo.toml  README.md  test_run_config.json  test_run_config_missing.json  test_run_config_more.json  test_run_config_noqual.json  test_run_config_partial.json  test_run_config_rev.json
src/: config.rs  handling.rs  lib.rs  main.rs  match_type.rs  matching.rs  output.rs  stat.rs
