[package]
name = "read_filter"
version = "0.1.0"
authors = ["Stefan Holderbach"]
description = "WIP! NOT FULLY IMPLEMENTED: Small command line tool to extract relevant information from amplicon seq reads of defined regions. Reimplementation of a personal python tool."
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.32"
clap = "2"
niffler = "2.3" # explcitly used for gzip handling
counter = "0.5" # not sure if I actually want to use it
serde_json = "1"
serde = "1"
ndarray = "0.14"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
tempfile = "3"

[profile.release]
debug = false
lto = true